force-app/main/default/objects/SFDC_Strategy2Oppty__c/SFDC_Strategy2Oppty__c.object-meta.xml
<CustomObject>
    <label>Customer Project</label>
    <nameField>
        <label>Customer Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>