force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Project_End_QTR__c.field-meta.xml
<CustomField>
    <fullName>Project_End_QTR__c</fullName>
    <description>This is Ending QTR of the Project which may have multiple Opportunities linked.</description>
    <inlineHelpText>This is Ending QTR of the Project which may have multiple Opportunities linked.</inlineHelpText>
    <label>Project End QTR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>