force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/SFDC_Strategy__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Strategy</label>
    <referenceTo>SFDC_Strategy__c</referenceTo>
    <relationshipName>R00N70000002MeyyEAC</relationshipName>
    <type>Lookup</type>
</CustomField>